--- a/css/adaptation.css
+++ b/css/adaptation.css
@@ -28,6 +28,14 @@
         margin-top: 10px;
     }
 }
+@media (max-width:800px) {
+    .cursor-dot {
+        display:none;
+    }
+    .cursor-dot-outline {
+        display:none;
+    }
+}
 @media (max-width:650px) {
     .title_top {
         padding: 50px 0;
